# mysql

./: .gitignore  .hgignore  .hgtags  .travis.yml  ChangeLog.md  README.markdown  Setup.hs  Setup.lhs  mysql.cabal  stack.yaml
.github/workflows/: tests.ylm
Database/: MySQL.hs
Database/MySQL/: Base.hs  C.hsc  PreparedStatement.hs  Types.hsc
Database/MySQL/Base/: C.hsc  Types.hsc
cbits/: mysql_signals.c
include/: mysql_signals.h
test/: main.hs
