name:           mysql
version:        0.1.1.4
homepage:       https://github.com/bos/mysql
bug-reports:    https://github.com/bos/mysql/issues
synopsis:       A low-level MySQL client library.
description:    
    A low-level client library for the MySQL database, implemented as
    bindings to the C @mysqlclient@ API.
    .
    /Important licensing note/: This library is BSD-licensed under the
    terms of the MySQL FOSS License Exception
    <http://www.mysql.com/about/legal/licensing/foss-exception/>.
    .
    Since this library links against the GPL-licensed @mysqlclient@
    library, a non-open-source application that uses it /may/ be
    subject to the terms of the GPL.
license:        BSD3
license-file:   LICENSE
author:         Bryan O'Sullivan <bos@serpentine.com>
maintainer:     Bryan O'Sullivan <bos@serpentine.com>
copyright:      2011 MailRank, Inc.
category:       Database
build-type:     Custom
cabal-version:  >= 1.6
extra-source-files:
    include/mysql_signals.h
    README.markdown

flag developer
  description: operate in developer mode
  default: False

library
  c-sources: cbits/mysql_signals.c

  include-dirs: include

  exposed-modules:
    Database.MySQL.Base
    Database.MySQL.Base.C
    Database.MySQL.Base.Types

  build-depends:
    base       < 5,
    bytestring >= 0.9 && < 1.0,
    containers

  ghc-options: -Wall
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs
  if flag(developer)
    ghc-prof-options: -auto-all
    ghc-options: -Werror
    cpp-options: -DASSERTS

source-repository head
  type:     git
  location: http://github.com/bos/mysql

source-repository head
  type:     mercurial
  location: http://bitbucket.org/bos/mysql
