name:           mysql
version:        0.1.2
homepage:       https://github.com/paul-rouse/mysql
bug-reports:    https://github.com/paul-rouse/mysql/issues
synopsis:       A low-level MySQL client library.
description:
    A low-level client library for the MySQL database, implemented as
    bindings to the C @mysqlclient@ API.
    .
    /Important licensing note/: This library is BSD-licensed under the
    terms of the MySQL FOSS License Exception
    <http://www.mysql.com/about/legal/licensing/foss-exception/>.
    .
    Since this library links against the GPL-licensed @mysqlclient@
    library, a non-open-source application that uses it /may/ be
    subject to the terms of the GPL.
license:        BSD3
license-file:   LICENSE
author:         Bryan O'Sullivan <bos@serpentine.com>
maintainer:     Paul Rouse <pyr@doynton.org>
copyright:      Copyright 2011 MailRank, Inc.
                Copyright 2013 Bryan O'Sullivan <bos@serpentine.com>
category:       Database
build-type:     Custom
cabal-version:  >= 1.8
extra-source-files:
    include/mysql_signals.h
    ChangeLog.md
    README.markdown


custom-setup
  setup-depends: base, Cabal

flag developer
  description: operate in developer mode
  default: False
  manual: True

library
  c-sources: cbits/mysql_signals.c

  include-dirs: include

  exposed-modules:
    Database.MySQL.Base
    Database.MySQL.Base.C
    Database.MySQL.Base.Types

  build-depends:
    base       < 5,
    bytestring >= 0.9 && < 1.0,
    containers

  ghc-options: -Wall
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs
  if flag(developer)
    ghc-prof-options: -auto-all
    ghc-options: -Werror
    cpp-options: -DASSERTS

test-suite test
    type:            exitcode-stdio-1.0
    main-is:         main.hs
    hs-source-dirs:  test
    ghc-options:     -Wall
    build-depends:   base                    >= 4 && < 5
                   , bytestring
                   , hspec
                   , mysql

source-repository head
  type:     git
  location: http://github.com/paul-rouse/mysql
